FreeST/test/Programs/ValidTests/tmp-valid/n-tuples/n-tuples.fst
f : Int -> Int
f x = -x

main : (Int, Int, Int, Int, Int, Int, Int, Int, Int, Int)
main = (f 5, 1, 2, 3, 4, 5, 6, 7, 8, 9)
